Closed Bug 1414036 Opened 7 years ago Closed 7 years ago

regression: BMO's buttons don't change when hovering over them

Categories

(Core :: Graphics: WebRender, defect, P1)

x86_64
All
defect

Tracking

()

VERIFIED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected

People

(Reporter: jan, Assigned: ethlin)

References

Details

(Keywords: nightly-community, regression, Whiteboard: [wr-mvp])

Attachments

(3 files)

Nightly 58 x64 20171101220120 de_DE @ Debian Testing (KDE, Radeon RX480)
fresh profile: layers.acceleration.force-enabled, gfx.webrender.enabled

STR (what I did with mozregression):
1. open https://bugzilla.mozilla.org/show_bug.cgi?id=1390741
2. hover the grey "▾" button on the top right of bugzilla (or "Show Obsolete Attachments")
3. They should get darker when hovering them, but they don't

mozregression --good 2017-11-01 --bad 2017-10-30 --profile-persistence clone-first
(layers.acceleration.force-enabled, gfx.webrender.enabled)
> 8:35.95 INFO: Last good revision: dcc8d6c7962930cea1b1581a851dd999af6d9e16
> 8:35.95 INFO: First bad revision: 3bc72af522e8beb8d5e04943a20ef383d998643d
> 8:35.95 INFO: Pushlog:
> https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=dcc8d6c7962930cea1b1581a851dd999af6d9e16&tochange=3bc72af522e8beb8d5e04943a20ef383d998643d

> Kartikaya Gupta — Bug 1407752 - Avoid taking the webrender fallback path for empty borders. r=jrmuizel
Has Regression Range: --- → yes
Has STR: --- → yes
Whiteboard: [wr-mvp] [triage]
Nightly 58 x64 20171102100041 de_DE @ Windows 10 1703 (Radeon RX480)
OS: Linux → All
Assignee: nobody → ethlin
Attached file testcase.html
button:hover doesn't work in this testcase when background-color is set,
but if you remove background-color, webrender's button is too bright when hovering.
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [wr-mvp] [triage] → [wr-mvp]
Comment on attachment 8924855 [details]
Bug 1414036 - Make sure we paint nsDisplayButtonBorder's box shadow before early return of the empty border.

https://reviewboard.mozilla.org/r/196106/#review201402

Thanks!
Attachment #8924855 - Flags: review?(bugmail) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/21ccfde24dec
Make sure we paint nsDisplayButtonBorder's box shadow before early return of the empty border. r=kats
https://hg.mozilla.org/mozilla-central/rev/21ccfde24dec
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Verified fixed in Nightly 58 x64 20171104100412 de_DE @ Debian Testing (KDE, Radeon RX480). Thank you!
fresh profile: layers.acceleration.force-enabled, gfx.webrender.enabled
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: