Bug 1414036 - Make sure we paint nsDisplayButtonBorder's box shadow before early return of the empty border. r=kats

MozReview-Commit-ID: AWevj7ls5SL